# Backend-takehome-problem

./: README.md  cli.py  fetcher.py  output.csv  pyproject.toml
